--- a/backend.service
+++ b/backend.service
@@ -4,7 +4,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="<MYSQL-SERVER-IPADDRESS>"
+Environment=DB_HOST="<db.hornet78s.online>"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
