--- a/backend.service
+++ b/backend.service
@@ -1,10 +1,9 @@
-
 [Unit]
 Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="<db.hornet78s.online>"
+Environment=DB_HOST="db.hornet78s.online"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
